Initial commit with secure authentication, MFA, profile management, and modular session handling

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,10 @@ authlib[httpx]
 python-dotenv
 Pillow
 moviepy
-pydub 
+pydub
+PyJWT>=2.8.0
+cryptography>=41.0.0
+keyring>=24.0.0
+email-validator>=2.0.0
+pyotp>=2.9.0
+ratelimit>=2.2.1
